Modified clock/time to be a live clock

--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
               <h1 class="location" id="location">Hagatna, Guam</h1>
               <div class="weatherIcon-main">⛅</div>
               <div class="weatherStatus">Partly Cloudy</div>
-              <h2 class="temp" id="temperature">17 °C</h2>
-             <!-- <p class="units">
-                <a href="#" id="celsius-link">°C</a>  | 
+              <span class="temp" id="temperature">17
+                <small class="units"><a href="#" id="celsius-link">°C</a>  | 
                 <a href="#" id="fahrenheit-link">°F</a>  
-              </p> -->
+              </small> </span>
               <div class="row p-0">
                 <div class="col p-1 just-right" id="feelsLike">Feels like 17</div>
               </div>
