Added weather icons and function to update each

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    
                 <br>
                 <div class = "weatherStatus">Partly Cloudy</div>
-                <img src="./media/sun.png" class="weatherIcon-main" alt="weather Icon">
+                <img src="./media/clearSky.png" class="weatherIcon-main" id="weatherIconMain" alt="weather Icon">
             </div>
 
               <div class="row p-0 mt-2">
