Added functions to update the main weather icon

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 
               <div class="row p-0 mt-2">
                 <div class="col p-1 just-left">
-                  <img src="./media/feelsLike.png" class="feelsLikeIcon" alt="thermostat">
+                  <img src="./media/feelsLikeTemp.png" class="feelsLikeIcon" alt="thermostat">
                   Feels like: <span id="feelsLike">17</span> 
                 </div>
               </div>
               <div class="row p-0">
                 <div class="col p-1 just-left">
-                  <img src="./media/wind-speed.png" class="windSpeedIcon" alt="wind speed icon"> 
+                  <img src="./media/windSpeed.png" class="windSpeedIcon" alt="wind speed icon"> 
                   Wind: <span id="windSpeed">6km/h</span>
                 </div>
               </div>
