Adjust main margin

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                   />
                 </form>
               </div>
-              <h1 class="location" id="location">Hagatna, GU</h1>           
+              <h1 class="location" id="location">Guam, GU</h1>           
             <div class="weatherForecast">
-                  <span class="temp" id="temperature">17</span><small class="units"><a href="#" id="celsius-link">°C</a>  | 
+                  <span class="temp" id="temperature">26</span><small class="units"><a href="#" id="celsius-link">°C</a>  | 
                         <a href="#" id="fahrenheit-link">°F</a>
                     </small>
    
