Added units conversion, added response when clicking F & C units

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                   <input
                     type="text"
                     id="search-input"
-                    placeholder="Enter city..."
+                    placeholder="Press 'Enter' to search city"
                     autocomplete="off"
                     autofocus="on"
                     class="rounded"
@@ -37,7 +37,7 @@
               </div>
               <h1 class="location" id="location">Guam, GU</h1>           
             <div class="weatherForecast">
-                  <span class="temp" id="temperature">26</span><small class="units"><a href="#" id="celsius-link">°C</a>  | 
+                  <span class="temp" id="temperature">26</span><small class="units"><a href="#" class="active" id="celsius-link">°C</a>  | 
                         <a href="#" id="fahrenheit-link">°F</a>
                     </small>
    
