--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
             <span class="credit-line"> 
             Open-source code on
             <a href="https://github.com/Teewawa/SheCodes-Week6" class="src-link">GitHub</a>
-            by Tiara Mendiola and hosted on
-            <a href="https://app.netlify.com/" class="src-link">Netlfiy</a>
+            by Tiara Mendiola
             </span>
           </footer>
         </div>      
