Updated Github link

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                        
             <span class="credit-line"> 
             Open-source code on
-            <a href="https://github.com/Teewawa/SheCodes-Week6" class="src-link">GitHub</a>
+            <a href="https://github.com/Teewawa" class="src-link">GitHub</a>
             by Tiara Mendiola
             </span>
           </footer>
